# TellMeLog

./: .gitignore  CMakeLists.txt  README.md  TellMeLog_overview.md  TellMeLog_progress.md  generate_large_log.ps1  logparser.cpp  logparser.h  main.cpp  mainwindow.cpp  mainwindow.h  reportgenerator.cpp  reportgenerator.h
testdata/logs/: append_watch_demo.ps1  device_d.csv  test_mixed.csv  test_mixed2.csv  test_mixed3.csv  test_mixed_DM.csv  test_normal_TASK-102.csv
